--- a/Chap-CalDependent.Rnw
+++ b/Chap-CalDependent.Rnw
@@ -489,7 +489,7 @@ print(p2, pos = c(1/2, 0, 1, 1), more = FALSE)
   \end{tabular}
 \end{table}
 
-As expected, all four procedures perform well for the first model, with coverage estimates close to $0.95$. For the second model, the methods still perform well, however, the Wald-based interval performs much worse for $\mathcal{Y}_0 = 2$, with coverage probability well below $0.95$. This should have been anticipated since we don't expect the sampling distribution of the inverse estimator, $\widehat{x}_0$, to be approximately normal (or even symmetric) in this case. Surprisingly, the inverse estimator seems to perform as well as the intervals based on the parametric bootstrap, however, the interval based on the percentile bootstrap has the advantage of providing an estimate of the entire sampling distribution of $\widehat{x}_0$, rather than just a confidene interval. Also, the Wald-based and inversion intervals do not account for the uncertainty in the estimated variance components and rely on large-sample sizes, therefore, would not be expected to perform as well on smaller data sets. A more extensive simulation study would be necessary to substantiate these claims.
+As expected, all four procedures perform well for the first model, with coverage estimates close to $0.95$. For the second model, the methods still perform well, however, the Wald-based interval performs much worse for $\mathcal{Y}_0 = 2$, with coverage probability well below $0.95$. This should have been anticipated since we don't expect the sampling distribution of the inverse estimator, $\widehat{x}_0$, to be approximately normal (or even symmetric) in this case. Surprisingly, the inversion interval seems to perform as well as the intervals based on the parametric bootstrap, however, the interval based on the percentile bootstrap has the advantage of providing an estimate of the entire sampling distribution of $\widehat{x}_0$, rather than just a confidene interval. Also, the Wald-based and inversion intervals do not account for the uncertainty in the estimated variance components and rely on large-sample sizes, therefore, would not be expected to perform as well on smaller data sets. A more extensive simulation study allowing for different sample size configurations would be necessary to substantiate these claims.
 
 \section{Bladder volume example}
 \label{sec:bladder-example}
